[gd_scene load_steps=13 format=2]

[ext_resource path="res://Starship/starship-sprite.png" type="Texture" id=1]
[ext_resource path="res://Starship/Starship.gd" type="Script" id=2]
[ext_resource path="res://Starship/StarshipFSM.gd" type="Script" id=3]
[ext_resource path="res://Effects/RCSThruster.tscn" type="PackedScene" id=4]
[ext_resource path="res://Effects/EngineThrust.tscn" type="PackedScene" id=5]
[ext_resource path="res://Cameras/CameraShake.tscn" type="PackedScene" id=6]
[ext_resource path="res://Starship/Camera2D.gd" type="Script" id=7]
[ext_resource path="res://UI/direction-arrow.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.13335, 31.8712 )

[sub_resource type="Animation" id=2]
resource_name = "BellyFlop"
length = 1.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 5, 6, 7, 8, 9, 10 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -100.0, -90.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "FlipManuever"
length = 1.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -90.0, 20.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1, 1.3, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 9, 11 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_kill_horizontal_velocity"
}, {
"args": [  ],
"method": "_kill_horizontal_velocity"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "Launching"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="Starship" type="KinematicBody2D"]
scale = Vector2( 1, 1.00404 )
collision_mask = 6
script = ExtResource( 2 )
MAX_SPEED = -300.0
max_damage = 30

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 0.128757 )
texture = ExtResource( 1 )
hframes = 12
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.128757 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Launching"
anims/BellyFlop = SubResource( 2 )
anims/FlipManuever = SubResource( 3 )
anims/Launching = SubResource( 4 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, 1.43051e-06 )
offset = Vector2( 0, -50 )
current = true
zoom = Vector2( 2.5, 2.5 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
offset_v = -1.0
script = ExtResource( 7 )

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="CameraShake" parent="Camera2D" instance=ExtResource( 6 )]

[node name="Smoke" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="Smoke"]
position = Vector2( 0, 31.8712 )
enabled = true
cast_to = Vector2( 0, 100 )
collision_mask = 2
collide_with_areas = true

[node name="EngineThrust" parent="." instance=ExtResource( 5 )]
show_behind_parent = true
position = Vector2( 0, 31.8712 )

[node name="Thrusters" type="Node2D" parent="."]

[node name="ForwardLeft" parent="Thrusters" instance=ExtResource( 4 )]
light_mask = 0
position = Vector2( -3, -24 )
rotation = 3.14159
scale = Vector2( 1, 1.00404 )

[node name="AftLeft" parent="Thrusters" instance=ExtResource( 4 )]
position = Vector2( -4, 21 )
rotation = 3.14159
scale = Vector2( 1, 1.00404 )

[node name="ForwardRight" parent="Thrusters" instance=ExtResource( 4 )]
position = Vector2( 2, -24 )
scale = Vector2( 1, 1.00404 )

[node name="AftRight" parent="Thrusters" instance=ExtResource( 4 )]
position = Vector2( 3, 21 )
scale = Vector2( 1, 1.00404 )

[node name="DistanceFromGround" type="RayCast2D" parent="."]
position = Vector2( 0, 31.8712 )
enabled = true
cast_to = Vector2( 0, 200 )
collision_mask = 2

[node name="DirectionArrow" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="DirectionArrow"]
position = Vector2( 0, -47.8069 )
texture = ExtResource( 8 )

[connection signal="engines_on" from="." to="EngineThrust" method="_on_Starship_engines_on"]
